feat:completing auth documentation
